# bjtu_projects

OS/实验一/: 实验一实验报告.doc
OS/实验一/project_1/: main.c
OS/实验一/project_1_1/: main.c
OS/实验一/project_1_2/: main.c
OS/实验三/: 实验三实验报告.doc
OS/实验三/project_3/: main.c
OS/实验二/: 实验二实验报告.doc
OS/实验二/project_2/: main.c  mem_mgr_bf.c  mem_mgr_bf.h  mem_mgr_def.h  mem_mgr_ff.c  mem_mgr_ff.h  mem_mgr_wf.c  mem_mgr_wf.h
OS/实验四/: 操作系统第四次实验报告_李强_10281082.doc
OS/实验四/project_4/: main.c  simple_shell.c  (+3 more)
byyl/实验一/: 实验一.doc
byyl/实验三/: 实验三.doc
byyl/实验二/: 实验二.doc
byyl/实验五/: 实验五.doc
byyl/实验六/: 实验六.doc
byyl/实验四/: 实验四.doc
k-means/: k-means.c
k-means/dl_lib/: dl_common.h
network_theory/: 10281082-李强-GBN可靠数据传输协议.doc
network_theory/gbn_client/: gbn_client.pro  gobackn_protocol.cpp  main.cpp  shell_client.cpp  shell_client.h
network_theory/gbn_server/: .gobackn_protocol.cpp.swp  gbn_server.pro  gobackn_protocol.cpp  gobackn_protocol.h  main.cpp  shell_server.cpp  shell_server.h
system_programming/10281082_李强/simplemonitor/: CMakeLists.txt  list_head.h  main.c  monitor_client.c  monitor_client.h  monitor_common.c  monitor_common.h  monitor_def.h  monitor_server.c  monitor_server.h
system_programming/10281082_李强/simplemonitor/controled_proc/: CMakeLists.txt  controled_proc.c  controled_proc.h  main.c
system_programming/10281082_李强/simplemonitor/doc/: 简单程序管理器的设计与实现.doc
system_programming/10281082_李强/simplemonitor/simplelog/: CMakeLists.txt
system_programming/10281082_李强/simplemonitor/simplelog/libsimplelog/: CMakeLists.txt  index_func.c  libsimplelog.h  log_def.h
(+35 files in other folders)
