project(simplemonitor)
cmake_minimum_required(VERSION 2.8)
add_subdirectory(simplelog)
add_subdirectory(controled_proc)
aux_source_directory(. SM_SRCS)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
add_executable(simplemonitor ${SM_SRCS})
target_link_libraries(simplemonitor libsimplelog)
target_link_libraries(simplemonitor pthread)
